[package]
name = "satori"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_repr = "0.1.16"
tokio = { version = "1.32.0", features = ["rt", "sync", "macros", "rt-multi-thread"] }
